--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
       </div>
       <div class="social-icons">
-        <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-        <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-        <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+        <a href="#"><img src="Facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="Instagram.png" alt="Instagram"></a>
+        <a href="#"><img src="Youtube.png" alt="YouTube"></a>
       </div>
     </div>
     <div class="menu-toggle">&#9776;</div>
