--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+  <!-- Media Sosial di Paling Atas -->
+  <div class="social-bar">
+    <div class="social-icons">
+      <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+      <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+      <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+    </div>
+  </div>
+
   <!-- Header -->
   <header class="header">
     <div class="top-bar">
@@ -18,13 +27,8 @@
           <p>The First Modern Paper Box Company in Indonesia</p>
         </div>
       </div>
-      <div class="social-icons">
-        <a href="#"><img src="Facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="Instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="Youtube.png" alt="YouTube"></a>
-      </div>
+      <div class="menu-toggle">&#9776;</div>
     </div>
-    <div class="menu-toggle">&#9776;</div>
   </header>
 
   <!-- Slider -->
@@ -45,4 +49,4 @@
 
   <script src="script.js"></script>
 </body>
-          </html>
+</html>
