--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- Media Sosial di Paling Atas -->
   <div class="social-bar">
     <div class="social-icons">
-      <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-      <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-      <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+      <a href="#"><img src="Facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="Instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="Youtube.png" alt="YouTube"></a>
     </div>
   </div>
 
