--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PT GURU INDONESIA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- Media Sosial di Paling Atas -->
   <div class="social-bar">
     <div class="social-icons">
-      <a href="#"><img src="Facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="Instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="Youtube.png" alt="YouTube"></a>
+      <a href="https://facebook.com/username" target="_blank">
+        <img src="images/Facebook.png" alt="Facebook">
+      </a>
+      <a href="https://instagram.com/username" target="_blank">
+        <img src="images/Instagram.png" alt="Instagram">
+      </a>
+      <a href="https://youtube.com/masukanusername" target="_blank">
+        <img src="images/Youtube.png" alt="YouTube">
+      </a>
     </div>
   </div>
 
@@ -21,7 +27,7 @@
   <header class="header">
     <div class="top-bar">
       <div class="logo">
-        <img src="logo.png" alt="Logo PT GURU INDONESIA">
+        <img src="images/logo.png" alt="Logo PT GURU INDONESIA">
         <div class="title">
           <h1>PT GURU INDONESIA</h1>
           <p>The First Modern Paper Box Company in Indonesia</p>
@@ -35,11 +41,11 @@
   <div class="slider-container">
     <div class="slider" id="slider">
       <div class="slide">
-        <img src="slide1.jpg" alt="Slide 1">
+        <img src="images/slide1.jpg" alt="Slide 1">
         <div class="caption">PT GURU INDONESIA</div>
       </div>
       <div class="slide">
-        <img src="slide2.jpg" alt="Slide 2">
+        <img src="images/slide2.jpg" alt="Slide 2">
         <div class="caption">Modern Paper Box Company</div>
       </div>
     </div>
