--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 
-  <!-- Media Sosial di Paling Atas -->
+  <!-- Media Sosial -->
   <div class="social-bar">
     <div class="social-icons">
-      <a href="https://facebook.com/username" target="_blank">
+      <a href="https://www.facebook.com/ptguruindonesia" target="_blank" title="Facebook PT GURU INDONESIA">
         <img src="images/Facebook.png" alt="Facebook">
       </a>
-      <a href="https://instagram.com/username" target="_blank">
+      <a href="https://www.instagram.com/ptguruindonesia" target="_blank" title="Instagram PT GURU INDONESIA">
         <img src="images/Instagram.png" alt="Instagram">
       </a>
-      <a href="https://youtube.com/masukanusername" target="_blank">
+      <a href="https://www.youtube.com/@ptguruindonesia" target="_blank" title="YouTube PT GURU INDONESIA">
         <img src="images/Youtube.png" alt="YouTube">
       </a>
     </div>
@@ -53,6 +53,39 @@
     <button class="nav right" onclick="nextSlide()">&#10095;</button>
   </div>
 
+  <!-- Produk -->
+  <section class="products">
+    <h2>Produk Kami</h2>
+    <div class="product-grid">
+      <img src="images/product1.jpg" alt="Produk 1">
+      <img src="images/product2.jpg" alt="Produk 2">
+      <img src="images/product3.jpg" alt="Produk 3">
+      <img src="images/product4.jpg" alt="Produk 4">
+    </div>
+    <a class="more-products" href="#">See More Products</a>
+  </section>
+
+  <!-- Foto Bersama -->
+  <section class="team-photo">
+    <img src="images/team.jpg" alt="Foto Bersama Karyawan">
+  </section>
+
+  <!-- Tentang PT -->
+  <section class="about">
+    <h2>Tentang PT GURU INDONESIA</h2>
+    <p>PT GURU INDONESIA adalah pelopor perusahaan modern dalam industri kardus di Indonesia. Kami berkomitmen pada kualitas, inovasi, dan kepuasan pelanggan.</p>
+  </section>
+
+  <!-- Kontak & Info -->
+  <footer class="footer">
+    <div class="contact-info">
+      <p><strong>Office & Factory:</strong> Jl. Contoh Alamat No. 123, Jakarta</p>
+      <p><strong>Telp/Fax:</strong> (021) 12345678</p>
+      <p><strong>WhatsApp:</strong> 0812-3456-7890</p>
+      <p><strong>Email:</strong> info@ptguruindonesia.co.id</p>
+    </div>
+  </footer>
+
   <script src="script.js"></script>
 </body>
-  </html>
+</html>
