--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PT Guru Indonesia</title>
+  <title>PT Global Sains Teknologi</title>
   
   <!-- Link untuk font Roboto dari Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -12,31 +12,25 @@
 </head>
 <body>
   <header>
-    <div class="logo">
-      <h1>PT Guru Indonesia</h1>
+    <div class="header-content">
+      <img src="logo.png" alt="Logo PT Global Sains Teknologi" class="logo">
+      <div class="logo-text">
+        <h1>PT Global Sains Teknologi</h1>
+      </div>
     </div>
   </header>
 
-  <!-- Slider Section -->
-  <section class="slider fade-in">
-    <div class="slider-item">
-      <img src="images/slider1.jpg" alt="Slide 1">
-    </div>
-    <div class="slider-item">
-      <img src="images/slider2.jpg" alt="Slide 2">
-    </div>
-    <div class="slider-item">
-      <img src="images/slider3.jpg" alt="Slide 3">
-    </div>
+  <!-- Foto Karyawan -->
+  <section class="employee-photo fade-in">
+    <img src="karyawan.jpg" alt="Foto Karyawan" class="employee-image">
   </section>
 
   <!-- About Section -->
   <section class="about fade-in">
     <div class="about-container">
-      <img src="images/karyawan.jpg" alt="Foto Karyawan" class="about-image">
       <div class="about-text">
-        <h2>Tentang PT Guru Indonesia</h2>
-        <p>PT Guru Indonesia adalah perusahaan yang bergerak di bidang pendidikan dan pelatihan. Kami membantu sekolah dan guru meningkatkan kualitas pembelajaran melalui pelatihan, materi, dan solusi digital. Tujuan kami adalah mendukung pendidikan Indonesia menjadi lebih maju dan berkualitas.</p>
+        <h2>Tentang PT Global Sains Teknologi</h2>
+        <p>PT Global Sains Teknologi berfokus pada pengembangan solusi teknologi inovatif untuk meningkatkan efisiensi dan produktivitas industri di Indonesia. Kami berkomitmen untuk menyediakan layanan terbaik yang mendukung kemajuan bisnis melalui teknologi terkini.</p>
       </div>
     </div>
   </section>
@@ -46,19 +40,19 @@
     <h2>Produk Kami</h2>
     <div class="product-container">
       <div class="product-item">
-        <img src="images/product1.jpg" alt="Product 1">
+        <img src="product1.jpg" alt="Product 1">
         <p>Produk 1</p>
       </div>
       <div class="product-item">
-        <img src="images/product2.jpg" alt="Product 2">
+        <img src="product2.jpg" alt="Product 2">
         <p>Produk 2</p>
       </div>
       <div class="product-item">
-        <img src="images/product3.jpg" alt="Product 3">
+        <img src="product3.jpg" alt="Product 3">
         <p>Produk 3</p>
       </div>
       <div class="product-item">
-        <img src="images/product4.jpg" alt="Product 4">
+        <img src="product4.jpg" alt="Product 4">
         <p>Produk 4</p>
       </div>
     </div>
@@ -76,13 +70,13 @@
         <li>Telp: +62 21 23456789</li>
         <li>Fax: +62 21 23456788</li>
         <li>Whatsapp: +62 8123456789</li>
-        <li>Email: info@theraa.com</li>
+        <li>Email: info@ptglobalsainsteknologi.com</li>
       </ul>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 PT Guru Indonesia. All rights reserved.</p>
+    <p>&copy; 2025 PT Global Sains Teknologi. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
