--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="header-content">
-      <img src="logo.png" alt="Logo PT Global Sains Teknologi" class="logo">
+      <img src="images/logo.png" alt="Logo PT Global Sains Teknologi" class="logo">
       <div class="logo-text">
         <h1>PT Global Sains Teknologi</h1>
       </div>
@@ -22,7 +22,7 @@
 
   <!-- Foto Karyawan -->
   <section class="employee-photo fade-in">
-    <img src="karyawan.jpg" alt="Foto Karyawan" class="employee-image">
+    <img src="images/karyawan.jpg" alt="Foto Karyawan" class="employee-image">
   </section>
 
   <!-- About Section -->
@@ -40,19 +40,19 @@
     <h2>Produk Kami</h2>
     <div class="product-container">
       <div class="product-item">
-        <img src="product1.jpg" alt="Product 1">
+        <img src="images/product1.jpg" alt="Product 1">
         <p>Produk 1</p>
       </div>
       <div class="product-item">
-        <img src="product2.jpg" alt="Product 2">
+        <img src="images/product2.jpg" alt="Product 2">
         <p>Produk 2</p>
       </div>
       <div class="product-item">
-        <img src="product3.jpg" alt="Product 3">
+        <img src="images/product3.jpg" alt="Product 3">
         <p>Produk 3</p>
       </div>
       <div class="product-item">
-        <img src="product4.jpg" alt="Product 4">
+        <img src="images/product4.jpg" alt="Product 4">
         <p>Produk 4</p>
       </div>
     </div>
