--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="about-container">
       <div class="about-text">
         <h2>Tentang PT Global Sains Teknologi</h2>
-        <p>PT Global Sains Teknologi berfokus pada pengembangan solusi teknologi inovatif untuk meningkatkan efisiensi dan produktivitas industri di Indonesia. Kami berkomitmen untuk menyediakan layanan terbaik yang mendukung kemajuan bisnis melalui teknologi terkini.</p>
+        <p>PT Global Sains Teknologi bergerak di bidang pendidikan dan pelatihan dengan tujuan meningkatkan kualitas pendidikan di Indonesia.</p>
       </div>
     </div>
   </section>
